--- a/Data_Analysis_Permutation&Combination.ipynb
+++ b/Data_Analysis_Permutation&Combination.ipynb
@@ -31,7 +31,7 @@
         "id": "P6HcBjRxHdb2"
       },
       "source": [
-        "# 7_Probability Permutation & Combination\n"
+        "# Probability Permutation & Combination\n"
       ]
     },
     {
